--- a/Barn/stylebarn.css
+++ b/Barn/stylebarn.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-  	background-color: #9AE48B;
+  	background-color: #21FFB6;
 	text-align: center;
 }
 
@@ -35,7 +35,7 @@ p {
 	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 	text-align: center;
 	font-family: Impact, Haettenschweiler, 'Franklin Gothic Bold', 'Arial Black', 'sans-serif';
-	font-size: 25px;
+	font-size: 30px;
 }
 
 p1 {
